--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -154,6 +154,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Formularios\Pesquisas\PesquisaGrupoGasto.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Formularios\Pesquisas\PesquisaTipoRenda.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Formularios\Pesquisas\UserControlPesquisas.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -210,6 +218,12 @@
     </Compile>
     <Compile Include="Formularios\Pesquisas\JanelaPesquisas.xaml.cs">
       <DependentUpon>JanelaPesquisas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Pesquisas\PesquisaGrupoGasto.xaml.cs">
+      <DependentUpon>PesquisaGrupoGasto.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Pesquisas\PesquisaTipoRenda.xaml.cs">
+      <DependentUpon>PesquisaTipoRenda.xaml</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Pesquisas\UserControlPesquisas.xaml.cs">
       <DependentUpon>UserControlPesquisas.xaml</DependentUpon>
