CRUD completo SubGrupoGasto

--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -122,6 +122,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Formularios\Cadastros\UserControlTipoSubGasto.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Formularios\Cadastros\UserControlUsuario.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -166,6 +170,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Formularios\Pesquisas\PesquisaSubGrupoGasto.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Formularios\Pesquisas\PesquisaTipoRenda.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -207,6 +215,9 @@
     <Compile Include="Formularios\Cadastros\UserControlTipoRenda.xaml.cs">
       <DependentUpon>UserControlTipoRenda.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\Cadastros\UserControlTipoSubGasto.xaml.cs">
+      <DependentUpon>UserControlTipoSubGasto.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\Cadastros\UserControlUsuario.xaml.cs">
       <DependentUpon>UserControlUsuario.xaml</DependentUpon>
     </Compile>
@@ -239,6 +250,9 @@
     </Compile>
     <Compile Include="Formularios\Pesquisas\PesquisaPessoas.xaml.cs">
       <DependentUpon>PesquisaPessoas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Pesquisas\PesquisaSubGrupoGasto.xaml.cs">
+      <DependentUpon>PesquisaSubGrupoGasto.xaml</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Pesquisas\PesquisaTipoRenda.xaml.cs">
       <DependentUpon>PesquisaTipoRenda.xaml</DependentUpon>
