Validacoes tela de contas incluidas e em teste

--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ObjetoValor\SituacaoCaixa.cs" />
     <Compile Include="ObjetoValor\SituacaoCofre.cs" />
     <Compile Include="ObjetoValor\SituacaoConta.cs" />
+    <Compile Include="ObjetoValor\SituacaoParcela.cs" />
     <Compile Include="ObjetoValor\TipoConta.cs" />
     <Compile Include="ObjetoValor\TipoPeriodo.cs" />
     <Compile Include="ObjetoValor\TipoContaBanco.cs" />
