--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -295,8 +295,15 @@
       <DependentUpon>Principal.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Formularios\Principais\UserControlConfiguracoes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\Principais\UserControlConfiguracoes.xaml.cs">
+      <DependentUpon>UserControlConfiguracoes.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\Validacoes\ValidacaoFormaPagamento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
