--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Dominio\Base.cs" />
     <Compile Include="Dominio\Caixa.cs" />
     <Compile Include="Dominio\Cofre.cs" />
+    <Compile Include="Dominio\Configuracao.cs" />
     <Compile Include="Dominio\Conta.cs" />
     <Compile Include="Dominio\ContaPagamento.cs" />
     <Compile Include="Dominio\FormaPagamento.cs" />
