--- a/CFP.Repositorio/CFP.Repositorio.csproj
+++ b/CFP.Repositorio/CFP.Repositorio.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Mapeamento\BancoMAP.cs" />
     <Compile Include="Mapeamento\CaixaMAP.cs" />
     <Compile Include="Mapeamento\CofreMAP.cs" />
+    <Compile Include="Mapeamento\ConfiguracaoMAP.cs" />
     <Compile Include="Mapeamento\ContaMAP.cs" />
     <Compile Include="Mapeamento\ContaPagamentoMAP.cs" />
     <Compile Include="Mapeamento\FormaPagamentoMAP.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Repositorio\RepositorioBase.cs" />
     <Compile Include="Repositorio\RepositorioCaixa.cs" />
     <Compile Include="Repositorio\RepositorioCofre.cs" />
+    <Compile Include="Repositorio\RepositorioConfiguracao.cs" />
     <Compile Include="Repositorio\RepositorioConta.cs" />
     <Compile Include="Repositorio\RepositorioContaPagamento.cs" />
     <Compile Include="Repositorio\RepositorioFormaPagamento.cs" />
