Tela de configuracoes concluida, opcao de adiconar arquivos na tela de contas criado. Ajustes nos dominios e mapeamentos do objeto contas.

--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Dominio\Cofre.cs" />
     <Compile Include="Dominio\Configuracao.cs" />
     <Compile Include="Dominio\Conta.cs" />
+    <Compile Include="Dominio\ContaArquivo.cs" />
     <Compile Include="Dominio\ContaPagamento.cs" />
     <Compile Include="Dominio\FormaPagamento.cs" />
     <Compile Include="Dominio\GrupoGasto.cs" />
