Dominio Caixa Ajustado e Dominio Fluxo de Caixa Criado.

--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Dominio\Conta.cs" />
     <Compile Include="Dominio\ContaArquivo.cs" />
     <Compile Include="Dominio\ContaPagamento.cs" />
+    <Compile Include="Dominio\FluxoCaixa.cs" />
     <Compile Include="Dominio\FormaPagamento.cs" />
     <Compile Include="Dominio\GrupoGasto.cs" />
     <Compile Include="Dominio\HoraExtra.cs" />
