caixa, entrada e saída manual concluída e testada, Totalizadores criado e atualizando junto com a tela.

--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -139,6 +139,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Formularios\Financeiros\TelasConfirmacoes\EntradaSaidaManual.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Formularios\Financeiros\UserControlCaixa.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -251,6 +255,9 @@
     </Compile>
     <Compile Include="Formularios\Financeiros\TelasConfirmacoes\ConfirmaValorInicialCaixa.xaml.cs">
       <DependentUpon>ConfirmaValorInicialCaixa.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Financeiros\TelasConfirmacoes\EntradaSaidaManual.xaml.cs">
+      <DependentUpon>EntradaSaidaManual.xaml</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Financeiros\UserControlCaixa.xaml.cs">
       <DependentUpon>UserControlCaixa.xaml</DependentUpon>
