--- a/CFP.Ferramentas/packages.config
+++ b/CFP.Ferramentas/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="NHibernate" version="5.2.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
